--- a/assets/css/appResume/basic/_style.scss
+++ b/assets/css/appResume/basic/_style.scss
@@ -7,6 +7,9 @@
 @import 'ui/checkbox';
 @import 'ui/percentage';
 @import 'ui/buttons';
+@import 'ui/tags';
+@import 'ui/text';
+@import 'ui/textEdit';
 
 // Resume control
 @import 'control/buttons';
