--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,6 +28,7 @@
 @import 'ui/basic/popup';
 @import 'ui/basic/table';
 @import 'ui/basic/caret';
+@import 'ui/basic/tags';
 @import 'ui/button';
 @import 'ui/typography';
 @import 'ui/rangeslider';
