--- a/assets/css/ui/basic/_tags.scss
+++ b/assets/css/ui/basic/_tags.scss
@@ -1,124 +1,131 @@
 .tag {
-    @extend .pos-rel;
-    @extend .float-left;
-    @extend .flex-centered;
-    @extend .pl-xs;
-    @extend .pr-xs;
-    @extend .h35;
-    @extend .borderRadius-xxl;
-    @extend .bg-snow;
-    @extend .borderWidth-1;
-    @extend .borderStyle-solid;
-    @extend .borderColor-blackLight-transparent;
-    @extend .c-gray;
-    @extend .fontFamily-helvetica;
-    @extend .fontWeight-normal;
-    @extend .userSelect-none;
-    @extend .cursor-pointer;
-    font-size:13px;
-    margin-right:6px;
-    margin-bottom:5px;
-    @include accelerate(true);
-    will-change:background, border-color, color, transform;
-    @extend .transition-default;
+    &-list {
+        @extend .flex-oneByOne;
+        @extend .mb--xss;
+        @extend .clear;
 
-    &-count {
-        @extend .flex-centered;
-        @extend .pos-abs;
-        @extend .borderRadius-circle;
-        @extend .fontFamily-roboto;
-        @extend .fontWeight-bold;
-        @extend .fontSize-12;
-        @extend .bg-white;
-        top:-7px;
-        left:-2px;
-        width:18px;
-        height:18px;
-        color:rgba($blue,.8);
-        border:1px solid rgba($blue,.8);
-    }
-    &-text {
-        @extend .display-inlineBlock;
-        @extend .vAlign-middle;        
-        @include textEllipsis(140px);
-    }
-    &-remove {
-        @extend .display-inlineBlock;
-        @include ui-icon(remove, 21px, 21px);
-        margin-left:6px;
-        margin-right:-2px;
-    }
-    &:before {
-        @extend .content-empty;
-        @extend .display-inlineBlock;
-        @extend .vAlign-middle;
-        @include ui-icon(tag, 21px, 21px);
-        margin-right:8px;
-    }
-    &-icon {
-        @extend .p0;
-        @extend .borderRadius-circle;
-        width:35px;
+        &[data-size="xl"]{
+            .tag {
+                &-item {
+                    @extend .pr50;
+                    font-size:1.25em;
 
-        &:before {
-            @extend .mr0;
-        }
-    }
-    &.new {
-        @extend .tag-icon;
+                    &-remove {
+                        @extend .w50;
 
-        &:before {
-            @include ui-icon(tagAdd);
+                        &:after {
+                            @extend .w25;
+                            @extend .h25;
+                        }
+                    }
+                }
+                &-input {
+                    .input {
+                        @extend .pr60;
+                    }
+                    .btn-icon {
+                        .btn-svg {
+                            transform:translateY(2px);
+                        }
+                    }
+                }
+            }
         }
-        &:hover:before {
-            @include ui-icon(tagAdd_white);
-        }
-    }
-    &.add {
-        @extend .tag-icon;
+        &[data-size="l"]{
+            .tag {
+                &-item {
+                    @extend .pr45;
+                    font-size:1em;
 
-        &:before {
-            @include ui-icon(plus);
-        }
-        &:hover:before {
-            @include ui-icon(plus_white);
-        }
-    }
-    &.edit {
-        @extend .tag-icon;
+                    &-remove {
+                        @extend .w45;
 
-        &:before {
-            @include ui-icon(edit, 16px, 16px);
+                        &:after {
+                            @extend .w22;
+                            @extend .h22;
+                        }
+                    }
+                }
+                &-input {
+                    .input {
+                        @extend .pr50;
+                    }
+                    .btn-icon {
+                        .btn-svg {
+                            transform:translateY(1px);
+                        }
+                    }
+                }
+            }
         }
-        &:hover:before {
-            @include ui-icon(edit_white);
-        }
-    }
-    &.small {
-        @extend .bg-none;
-        @extend .h30;
-        border-color:$grayLight;
-        padding:0 9px;
+        &[data-size="m"]{
+            .tag {
+                &-item {
+                    @extend .pr-l;
+                    font-size:0.95em;
 
-        &:before {
-            width:17px;
-            height:17px;
-            margin-right:6px;
-        }
-    }
-    &:hover {
-        @extend .c-white;
-        @extend .borderColor-blue;
-        @extend .bg-blue;
+                    &-remove {
+                        @extend .w40;
 
-        &:before {
-            @include ui-icon(tag_white);
-        }
-        .tag-remove {
-            @include ui-icon(remove_white);
+                        &:after {
+                            width:21px;
+                            height:21px;
+                        }
+                    }
+                }
+                &-input {
+                    .input {
+                        @extend .pr-l;
+                    }
+                }
+            }
         }
     }
-    &:active {
-        transform:translate3d(0, 1px, 0) scale(0.85);
+    &-input {
+        @extend .pos-rel;
+        @extend .float-left;
+        @extend .mb-xss;
+        @extend .mr-xss;
+
+        .btn {
+            @extend .pos-tr;
+            @extend .zIndex-102;
+
+            &:hover {
+                .btn-svg-color {
+                    @extend .fill-blue;
+                }
+            }
+        }
+    }
+    &-item {
+        @extend .pos-rel;
+        @extend .w-auto;
+        @extend .mr-xss;
+        @extend .mb-xss;
+        @extend .input;
+        @extend .cursor-default;
+
+        &-remove {
+            @extend .pos-tr;
+            @extend .h100p;
+            @extend .cursor-pointer;
+
+            &:after {
+                @extend .content-empty;
+                @extend .pos-centered;
+                @extend .bg-cover;
+                @include ui-icon(remove_fill);
+                @extend .mt--1;
+            }
+        }
+        &[data-avail="true"]{
+            animation:tag-item-avail 1s ease-in-out;
+        }
+        @keyframes tag-item-avail {
+            25%, 75% {
+                background:rgba($lime,.4);
+            }
+        }
     }
 }
