--- a/assets/templates/sections/stat/resumeStat.html
+++ b/assets/templates/sections/stat/resumeStat.html
@@ -32,7 +32,7 @@
         <div class="resume__stat__content container">
             <div class="row">
                 <div class="col-md-6 text-center">
-                    <div class="resume__stat__photo" style="background-image:url({ item.get('photo') })"></div>
+                    <div class="resume__stat__photo" style="background-image:url({ item.get('commons', 'photo') })"></div>
                     <div class="chart__radial trY-l" name="chartRadialEl"></div>
                 </div>
                 <div class="col-md-18">
