--- a/assets/templates/appResume/basic/components/educationItem.html
+++ b/assets/templates/appResume/basic/components/educationItem.html
@@ -3,22 +3,13 @@
     <div class="{ opts.active ? 'display-block' : 'display-none' }">
         <div class="row mb-m xs-pt-m">
             <div class="hidden-xs col-sm-8 pt-xs pr-m">
-                <span class="visible-lg c-gray fontSize-28">Уровень образования</span>
-                <span class="visible-sm visible-md c-gray fontSize-28">Степень</span>
-            </div>
-            <div class="col-xs-24 col-sm-16">
-                <ui-select onUpdate="all" update="level" cursor={ $resume.select("education", "items", {"id": opts.item.id}) } items={ $store.education.getItems() } size="xl"></ui-select>
-            </div>
-        </div>
-        <div class="row mb-m">
-            <div class="hidden-xs col-sm-8 pt-xs pr-m">
                 <span class="nowrap c-gray fontSize-28">Учебное заведение</span>
             </div>
             <div class="col-xs-24 col-sm-16">
-                <ui-input update="title" cursor={ $resume.select("education", "items", {"id": opts.item.id}) } placeholder={ 'Учебное заведение' : app.device.isPhone } size="xl"></ui-input>
+                <ui-input update="title" cursor={ $resume.select("education", "items", {"id": opts.item.id}) } placeholder={ 'Учебное заведение' : app.device.isPhone } autosuggest="getSuggestEducation" autosuggestSize="xl" size="xl"></ui-input>
             </div>
         </div>
-        <div if={ get.level() != "8" } class="row mb-m">
+        <div class="row mb-m">
             <div class="hidden-xs col-sm-8 pt-xs pr-m">
                 <span class="c-gray fontSize-28">Факультет</span>
             </div>
@@ -26,15 +17,15 @@
                 <ui-input update="faculty" cursor={ $resume.select("education", "items", {"id": opts.item.id}) } placeholder={ 'Факультет' : app.device.isPhone } size="xl"></ui-input>
             </div>
         </div>
-        <div if={ get.level() != "8" } class="row mb-m">
+        <div class="row mb-m">
             <div class="hidden-xs col-sm-8 pt-xs pr-m">
                 <span class="c-gray fontSize-28">Специальность</span>
             </div>
             <div class="col-xs-24 col-sm-16">
-                <ui-input update="speciality" cursor={ $resume.select("education", "items", {"id": opts.item.id}) } placeholder={ 'Специальность' : app.device.isPhone } size="xl"></ui-input>
+                <ui-input update="speciality" cursor={ $resume.select("education", "items", {"id": opts.item.id}) } placeholder={ 'Специальность' : app.device.isPhone } autosuggest="getSuggestSpeciality" autosuggestSize="xl" size="xl"></ui-input>
             </div>
         </div>
-        <div class="row mb-m">
+        <div class="row mb-l">
             <div class="hidden-xs col-sm-8 pt-xs pr-m">
                 <span class="c-gray fontSize-28">Год окончания</span>
             </div>
@@ -51,20 +42,20 @@
         </div>
     </div>
     <div class="{ opts.active ? 'display-none' : 'display-block text-left pt-m pb-l mb-s' }">
-        <div class="row pos-rel">
+        <div class="row pos-rel mb-s">
             <div class="pos-centered-h fontSize-38 fontWeight-bold c-grayLighten opacity-75 letterSpacing-0">
                 <div class="trY--xl pt-xs">{ opts.item.year }</div>
             </div>
-            <div class="col-xs-24 col-sm-10">
-                <h2 class="c-blue mb-m xs-mb-s">{ $store.education.getTitleById(opts.item.level) }</h2>
+            <div class="col-xs-24 col-sm-10 xs-mb-s">
+                <h3 if={ opts.item.speciality } class="subtitle">{ opts.item.speciality }</h3>
             </div>
             <div class="col-xs-24 col-sm-14 text-right">
-                <h3 if={ opts.item.level != "8" && opts.item.speciality } class="c-blue mb-s pt-xxs">Специальность &ndash; { opts.item.speciality }</h3>
+                <h3 if={ opts.item.faculty } class="subtitle">{ opts.item.faculty }</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-24">
-                <p class="c-gray fontSize-22 lineHeight-xl">{ opts.item.title }<strong if={ opts.item.level != "8" && opts.item.faculty } class="c-blue">&nbsp; { opts.item.faculty }</strong></p>
+                <p class="c-gray fontSize-22 lineHeight-xl">{ opts.item.title }</p>
             </div>
         </div>
     </div>
@@ -76,9 +67,6 @@
     $.get = {
         cursor: function(){
             return $resume.select("education", "items", {"id": $.opts.item.id});
-        },
-        level: function(){
-            return $resume.select("education", "items", {"id": $.opts.item.id}).get("level");
         }
     };
 
